--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,9 +16,9 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
-  - name: "page"
-    label: "Page"
-    folder: "content/page"
+  - name: "chinese-test"
+    label: "Chinese-test"
+    folder: "content/post/chinese-test"
     create: true
     slug: "{{slug}}"
     editor:
