--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,21 +16,9 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
-  - name: "chinese-test"
-    label: "Chinese-test"
-    folder: "content/post/chinese-test"
-    create: true
-    slug: "{{slug}}"
-    editor:
-      preview: false
-    fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Description", name: "description", widget: "string" }
-      - { label: "Body", name: "body", widget: "markdown" }
-  - name: "categories"
-    label: "Categories"
-    folder: "content/categories"
+  - name: "rich-content"
+    label: "Rich-content"
+    folder: "content/post/rich-content"
     create: true
     slug: "{{slug}}"
     editor:
